Fix body overflow

--- a/_assets/sass/_layout.sass
+++ b/_assets/sass/_layout.sass
@@ -1,8 +1,10 @@
 html,
 body
-  overflow-x: hidden
   position: relative
   width: 100%
+
+  @media (max-width: 42em)
+    overflow-x: hidden
 
   &.menu-open
     overflow-y: hidden !important
